--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -2,14 +2,10 @@ body { font-family: 'Roboto', sans-serif; background-color: #36b589 }
 
 .list { position: absolute; top: 50%; left: 50%; background-color: white; transform: translate(-50%, -50%); padding: 50px 70px; border-radius: 20px; box-shadow: 10px 20px 40px -5px rgba(0,0,0,0.25); max-width: 400px; }
 
-form { margin-bottom: 30px; }
-
 button { height: 30px; min-width: 30px; border-radius: 30px; font-size: 15px; margin-left: 5px; background: black; color: white; border: none; float: right; opacity: 0.7;
     &:focus, &:hover { opacity: 1; outline: 0;}
     &.add { background-color: green; }
-    &.remove { background-color: transparent; height: 30px; width: 30px; font-size: 16px; 
-        i {color: red; }
-    }
+    &.remove { background-color: transparent; color: red; height: 30px; min-width: 30px; font-size: 12px; border-radius: none; margin: 0; padding: 0;}
     &.search { }
 }
 
@@ -17,7 +13,6 @@ input { font-size: 20px; height: 30px; width: 100%; margin-bottom: 10px; }
 
 p { font-size: 14px; opacity: 0.5; font-weight: 300; letter-spacing: 1px; }
 
+li {  display: normal; list-style-type: none; font-size: 16px; line-height: 30px; padding: 10px; min-height: 30px; border-bottom: 1px solid lightgray; }
 
-li { list-style-type: none; font-size: 16px; line-height: 16px; padding: 10px; min-height: 30px; border-bottom: 2px solid gray; left: -20px; }
-
-.tasks-zone { max-height: 40vh; overflow: auto; }
+.tasks { min-width: 100%; max-height: 40vh; overflow: auto; }
