--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,7 +12,8 @@ button { height: 30px; min-width: 30px; border-radius: 30px; font-size: 15px; ma
 input { font-size: 20px; height: 30px; width: 100%; margin-bottom: 10px; }
 
 p { font-size: 14px; opacity: 0.5; font-weight: 300; letter-spacing: 1px; }
-
 li {  display: normal; list-style-type: none; font-size: 16px; line-height: 30px; padding: 10px; min-height: 30px; border-bottom: 1px solid lightgray; }
 
 .tasks { min-width: 100%; max-height: 40vh; overflow: auto; }
+
+ul { padding-left: 0; }
