--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -16,4 +16,4 @@ li {  display: normal; list-style-type: none; font-size: 16px; line-height: 30px
 
 .tasks { min-width: 100%; max-height: 40vh; overflow: auto; }
 
-ul { padding-left: 0; }
+ul { padding-left: 0; margin: 0; }
