edit api fontawesome

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -17,3 +17,6 @@ li {  display: normal; list-style-type: none; font-size: 16px; line-height: 30px
 .tasks { min-width: 100%; max-height: 40vh; overflow: auto; }
 
 ul { padding-left: 0; margin: 0; }
+
+
+//git subtree push --prefix dist origin gh-pages
